<resources>
    <!-- CREDENCIALES APLICATIVO -->
    <string name="app_name">PortatilPlus</string>
    <string name="developer">Freddy, Lisandro</string>
    <string name="desarrollo">Desarrollado por:</string>
    <string name="version">Version 1.0.0</string>

    <!-- Login -->
    <string name="titulo_login">Ingrese Sesion</string>
    <string name="lbl_usuario">Usuario</string>
    <string name="txt_usuario">Ingrese Usuario</string>
    <string name="lbl_password">Contraseña</string>
    <string name="txt_contraseña">Ingrese Contraseña</string>
    <string name="btn_ingresar">Ingresar</string>
    <string name="lbl_crear_cuenta">NO tienes cuenta?</string>
    <string name="btn_regis">Registrate Aqui!</string>

    <!-- Registro -->
    <string name="txt_texto">Regístrate con nosotros</string>
    <string name="txt_texto2">Ingresa tus datos personales para crear una cuenta en PortatilPlus</string>
    <string name="txt_nombre">Nombres</string>
    <string name="txt_apellido">Apellidos</string>
    <string name="txt_correo">Correo electronico</string>
    <string name="txt_fecha">Telefono</string>
    <string name="txt_contra">Contraseña</string>
    <string name="txt_confi">Confirmacion de contraseña</string>
    <string name="btn_crear">Crear cuenta</string>
    <string name="lbl_cuenta_existente">¿Ya tienes una cuenta?</string>
    <string name="btn_iniciar">Iniciar sesión</string>

    <!-- Navegacion -->
    <string name="app_namenav">Navigation Drawer</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--  reserva  -->
    <string name="compu">Registro de rervacion</string>
    <string name="lbl_nombre">Ingrese su Nombre</string>
    <string name="lbl_ace">Ingrese el id del acesorio</string>
    <string name="lbl_compu">Ingrese el id del computador</string>
    <string name="lbl_fec">Ingrese la fecha</string>
    <string name="btn_confi">Comfirmar Reserva</string>
    <string name="btn_aqui">!Reserva Aqui¡</string>


    <!--  home  -->
    <string name="info">Terminos y condiciones
        ©2024-2025 PortatilPlus
    </string>

    <!--  sanciones  -->
    <string name="pdf">Generar Pdf</string>

</resources>