<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_reserva"
    tools:context=".Fragment.RegistroservaFragment">

    <View
        android:id="@+id/view"
        android:layout_width="334dp"
        android:layout_height="485dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="36dp"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="122dp"
        android:background="#816DBE6C" />


    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="84dp"
        android:layout_marginTop="158dp"
        android:layout_marginEnd="87dp"
        android:layout_marginBottom="539dp"
        android:text="@string/compu"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout9"
        android:layout_width="260dp"
        android:layout_height="55dp"
        android:layout_alignStart="@+id/view"
        android:layout_alignTop="@+id/view"
        android:layout_alignEnd="@+id/view"
        android:layout_alignBottom="@+id/view"
        android:layout_gravity="center"
        android:layout_marginStart="41dp"
        android:layout_marginTop="105dp"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="326dp"
        android:textColorHint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextNombre"
            android:layout_width="260dp"
            android:layout_height="50dp"
            android:hint="@string/lbl_nombre"
            android:inputType="text"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout10"
        android:layout_width="260dp"
        android:layout_height="55dp"
        android:layout_alignStart="@+id/view"
        android:layout_alignTop="@+id/view"
        android:layout_alignEnd="@+id/view"
        android:layout_alignBottom="@+id/view"
        android:layout_gravity="center"
        android:layout_marginStart="40dp"
        android:layout_marginTop="193dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="238dp"
        android:textColorHint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextNumber"
            android:layout_width="260dp"
            android:layout_height="50dp"
            android:hint="@string/lbl_ace"
            android:inputType="number"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout11"
        android:layout_width="260dp"
        android:layout_height="55dp"
        android:layout_alignStart="@+id/view"
        android:layout_alignTop="@+id/view"
        android:layout_alignEnd="@+id/view"
        android:layout_alignBottom="@+id/view"
        android:layout_gravity="center"
        android:layout_marginStart="40dp"
        android:layout_marginTop="277dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="154dp"
        android:textColorHint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextNumber2"
            android:layout_width="260dp"
            android:layout_height="50dp"
            android:hint="@string/lbl_compu"
            android:inputType="number"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout12"
        android:layout_width="260dp"
        android:layout_height="55dp"
        android:layout_alignStart="@+id/view"
        android:layout_alignTop="@+id/view"
        android:layout_alignEnd="@+id/view"
        android:layout_alignBottom="@+id/view"
        android:layout_gravity="center"
        android:layout_marginStart="42dp"
        android:layout_marginTop="353dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="78dp"
        android:textColorHint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextTelefono"
            android:layout_width="260dp"
            android:layout_height="50dp"
            android:hint="@string/lbl_fec"
            android:inputType="date"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_confirese"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/view"
        android:layout_alignTop="@+id/view"
        android:layout_alignEnd="@+id/view"
        android:layout_alignBottom="@+id/view"
        android:layout_marginStart="72dp"
        android:layout_marginTop="424dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="6dp"
        android:text="@string/btn_confi" />

</RelativeLayout>